Mercury V2 Connect Cloud support - Cable Modem Parameters ( RDKB-4477 : CR015 )
Description:
- Added TR-181 DML parameters of X_LGI-COM_CableModem object
- Added implementation of X_LGI-COM_CableModem parameters
 - Device.X_LGI-COM_CableModem.CMStatus
 - Device.X_LGI-COM_CableModem.ToDStatus
 - Device.X_LGI-COM_CableModem.CmDoc30SwRegistrationState
 - Device.X_LGI-COM_CableModem.T1Timeouts
 - Device.X_LGI-COM_CableModem.SoftwareOperStatus
 - Device.X_LGI-COM_CableModem.EnergyMgtOperStatus
 - Device.X_LGI-COM_CableModem.OvertempProtModeState
 - Device.X_LGI-COM_CableModem.PartServiceFallback20
 - Device.X_LGI-COM_CableModem.DownstreamPrimaryChannelID
 - Device.X_LGI-COM_CableModem.QosServiceFlow.UpstreamNumberOfEntries
 - Device.X_LGI-COM_CableModem.QosServiceFlow.DownstreamNumberOfEntries
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSetNumberOfEntries
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSet.{i}.MaxTrafficRate
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSet.{i}.MaxTrafficBurst
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSet.{i}.MinReservedRate
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSet.{i}.MaxConcatBurst
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Upstream.{i}.QosParamSet.{i}.SchedulingType
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSetNumberOfEntries
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSet.{i}.MaxTrafficRate
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSet.{i}.MaxTrafficBurst
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSet.{i}.MinReservedRate
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSet.{i}.MaxConcatBurst
 - Device.X_LGI-COM_CableModem.QosServiceFlow.Downstream.{i}.QosParamSet.{i}.Sched

--- a/source/TR-181/integration_src.shared/Makefile.am
+++ b/source/TR-181/integration_src.shared/Makefile.am
@@ -32,3 +32,5 @@ libCcspCMAgent_integration_src_shared_la_CPPFLAGS = \
 
 libCcspCMAgent_integration_src_shared_la_SOURCES = cosa_x_cisco_com_cablemodem_apis.c cosa_device_info_apis.c cosa_x_rdkcentral_com_cablemodem_apis.c
 libCcspCMAgent_integration_src_shared_la_LDFLAGS = -lccsp_common -lcm_mgnt -lsecure_wrapper -lhal_platform
+
+libCcspCMAgent_integration_src_shared_la_SOURCES += cosa_lgi_cablemodem_apis.c
