--- a/source/CMAgentSsp/Makefile.am
+++ b/source/CMAgentSsp/Makefile.am
@@ -16,21 +16,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
+
 ACLOCAL_AMFLAGS = -I m4
+
 bin_PROGRAMS = CcspCMAgentSsp
+
 CcspCMAgentSsp_CPPFLAGS = \
     -I$(top_srcdir)/source/TR-181/board_sbapi \
     -I$(top_srcdir)/source/TR-181/middle_layer_src \
     -I$(top_srcdir)/source/TR-181/include \
     -I$(top_srcdir)/source/Custom \
-	-I$(top_srcdir)
+    -I$(top_srcdir)
+
 CcspCMAgentSsp_CFLAGS = $(SYSTEMD_CFLAGS)
 CcspCMAgentSsp_CFLAGS = $(WANMGR_CFLAGS)
-CcspCMAgentSsp_SOURCES = gw_prov_sm.c ssp_main.c ssp_messagebus_interface.c ssp_action.c dm_pack_datamodel.c 
-CcspCMAgentSsp_LDFLAGS = -lccsp_common -lsyscfg -lcm_mgnt -lsecure_wrapper $(SYSTEMD_LDFLAGS)  $(WANMGR_LDFLAGS) 
+CcspCMAgentSsp_SOURCES = gw_prov_sm.c ssp_main.c ssp_messagebus_interface.c ssp_action.c dm_pack_datamodel.c
+CcspCMAgentSsp_LDFLAGS = -lccsp_common -lsyscfg -lcm_mgnt -lsecure_wrapper $(SYSTEMD_LDFLAGS) $(WANMGR_LDFLAGS)
+
 if FEATURE_WAN_FAIL_OVER
 CcspCMAgentSsp_DEPENDENCIES = ${top_builddir}/source/TR-181/middle_layer_src/libCcspCMAgent_middle_layer_src.la
 CcspCMAgentSsp_LDADD = $(CcspCMAgentSsp_DEPENDENCIES)
