--- a/source/test/Makefile.am
+++ b/source/test/Makefile.am
@@ -1,4 +1,4 @@
-#
+##########################################################################
 # If not stated otherwise in this file or this component's LICENSE file the
 # following copyright and licenses apply:
 #
@@ -15,17 +15,15 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
+##########################################################################
+AM_CFLAGS =
 
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-
-AM_CPPFLAGS = -Wall -g -Werror
 AM_CXXFLAGS = -std=c++11
 
 ACLOCAL_AMFLAGS = -I m4
+
 bin_PROGRAMS = CcspCMAgentSsp_gtest.bin
+
 CcspCMAgentSsp_gtest_bin_CPPFLAGS = -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/gtest -I${top_srcdir}/gtest/include -I${top_srcdir}/source -I${top_srcdir}/source/include
-CcspCMAgentSsp_gtest_bin_SOURCES =  CMAgentSspTest.cpp\
-                                        gtest_main.cpp
+CcspCMAgentSsp_gtest_bin_SOURCES = CMAgentSspTest.cpp gtest_main.cpp
 CcspCMAgentSsp_gtest_bin_LDFLAGS = -lgtest -lgmock -lgcov -pthread
