--- a/configure.ac
+++ b/configure.ac
@@ -72,7 +72,6 @@ SYSTEMD_CFLAGS=" "
 SYSTEMD_LDFLAGS=" "
 
 WANMGR_CFLAGS=" "
-WANMGR_LDFLAGS=" "
 
 AC_ARG_ENABLE([notify],
         AS_HELP_STRING([--enable-notify],[enable systemd notify]),
@@ -92,11 +91,9 @@ AC_ARG_ENABLE([wanmgr],
         [
           case "${enableval}" in
            yes) WANMGR_CFLAGS="-DENABLE_RDK_WANMANAGER"
-                WANMGR_SOURCE_T="gw_prov_sm.c"
-                WANMGR_LDFLAGS="-lsysevent -lulog -lsecure_wrapper" 
 		FEATURE_RDKB_WAN_MANAGER=yes ;;
            no) AC_MSG_ERROR([wanmgr is disabled]) ;;
-          *) AC_MSG_ERROR([bad value ${enableval} for --enable-notify ]) ;;
+          *) AC_MSG_ERROR([bad value ${enableval} for --enable-wanmgr]) ;;
            esac
            ],
          [echo "wanmgr is disabled."])
@@ -106,8 +103,6 @@ AC_SUBST(SYSTEMD_CFLAGS)
 AC_SUBST(SYSTEMD_LDFLAGS)
 
 AC_SUBST(WANMGR_CFLAGS)
-AC_SUBST(WANMGR_LDFLAGS)
-
 
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
