autotools cleanup - fix missing LDFLAGS etc when wan_manager is enabled
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

--- a/source/CMAgentSsp/Makefile.am
+++ b/source/CMAgentSsp/Makefile.am
@@ -32,18 +32,18 @@ CcspCMAgentSsp_CPPFLAGS = \
 CcspCMAgentSsp_CFLAGS = $(SYSTEMD_CFLAGS)
 CcspCMAgentSsp_CFLAGS = $(WANMGR_CFLAGS)
 CcspCMAgentSsp_SOURCES = gw_prov_sm.c ssp_main.c ssp_messagebus_interface.c ssp_action.c dm_pack_datamodel.c
-CcspCMAgentSsp_LDFLAGS = -lccsp_common -lsyscfg -lcm_mgnt -lsecure_wrapper $(SYSTEMD_LDFLAGS) $(WANMGR_LDFLAGS)
+CcspCMAgentSsp_LDFLAGS = -lccsp_common -lsyscfg -lcm_mgnt -lsecure_wrapper $(SYSTEMD_LDFLAGS) -lpthread
+
+if FEATURE_RDKB_WAN_MANAGER
+CcspCMAgentSsp_LDFLAGS += -lsysevent -lcimplog -ltelemetry_msgsender -lrt
+if !PLATFORM_PUMA7_ENABLED
+CcspCMAgentSsp_LDFLAGS += -lgwprovappabs
+endif
+endif
 
 if FEATURE_WAN_FAIL_OVER
 CcspCMAgentSsp_DEPENDENCIES = ${top_builddir}/source/TR-181/middle_layer_src/libCcspCMAgent_middle_layer_src.la
 CcspCMAgentSsp_LDADD = $(CcspCMAgentSsp_DEPENDENCIES)
-endif
-
-
-if !PLATFORM_PUMA7_ENABLED
-if FEATURE_RDKB_WAN_MANAGER
-CcspCMAgentSsp_LDFLAGS += -lgwprovappabs
-endif
 endif
 
 if PLATFORM_PUMA7_ENABLED
