RDKB-55944: Gtest cases for CcspCMAgent
Reason for change: Gtest cases for CcspCMAgent
Component using RdkbGmock mocks

Test Procedure: RDKB-CI-DOCKER Build should be a success.
Risks: None
Priority: P1
Signed-off-by: Goutam_Damodaran@comcast.com

(cherry picked from commit b8a613118a12784f71a98e30f95b8f19d2712602)
Change-Id: Ic66c871fdd61dacc95b8247aaabc24b07a8bd373

--- a/source/test/Makefile.am
+++ b/source/test/Makefile.am
@@ -2,7 +2,7 @@
 # If not stated otherwise in this file or this component's LICENSE file the
 # following copyright and licenses apply:
 #
-# Copyright 2015 RDK Management
+# Copyright 2024 RDK Management
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -16,14 +16,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS =
-
-AM_CXXFLAGS = -std=c++11
-
-ACLOCAL_AMFLAGS = -I m4
-
-bin_PROGRAMS = CcspCMAgentSsp_gtest.bin
-
-CcspCMAgentSsp_gtest_bin_CPPFLAGS = -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/gtest -I${top_srcdir}/gtest/include -I${top_srcdir}/source -I${top_srcdir}/source/include
-CcspCMAgentSsp_gtest_bin_SOURCES = CMAgentSspTest.cpp gtest_main.cpp
-CcspCMAgentSsp_gtest_bin_LDFLAGS = -lgtest -lgmock -lgcov -pthread
+SUBDIRS = CcspCMAgentDmlTest
